--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,28 @@
+# Important Notes:
+# Every field you add must be added to the root build.gradle expandProps map.
+
 # Project
 version=0.2.0
 group=com.helliongames.snifferplus
 
 # Common
-minecraft_version=1.20.1
-common_runs_enabled=false
-common_client_run_name=Common Client
-common_server_run_name=Common Server
-
-# Forge
-forge_version=47.0.3
-//forge_ats_enabled=true
-
-# Fabric
-fabric_version=0.83.1+1.20.1
-fabric_loader_version=0.14.21
-
-# Mod options
+minecraft_version=1.20.4
 mod_name=Sniffer+
 mod_author=HellionGames
 mod_id=snifferplus
+license=Apache-2.0
+credits=
+description=A 1.20 expansion mod that builds on the functionality of the Sniffer.
+minecraft_version_range=[1.20.4, 1.21)
+
+# Fabric
+fabric_version=0.92.1+1.20.4
+fabric_loader_version=0.15.3
+
+# Forge
+forge_version=49.0.41
+forge_loader_version_range=[49,)
+forge_version_range=[49,)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
